

OTHER CHANGES
=============

2.4.3
-----

All:

- Spanish translations updated (Javier San Jose)
- fixed DLL build of db.cpp with some OpenWatcom (ABX)
- fixed wxZlibOutputStream to properly close zlib stream

All (GUI):

- bug in wxWindow::RemoveEventHandler() fixed (Yingjun Zhang)
- bug in wxColourDatabase::FindColour() which could led to crashes fixed

Generic:

- file dialog and directory dialog now support drive letters on OS/2
- fixed scrollbar problem in wxGrid (not showing scrollbars
  when sizing smaller) (Shane Harper)
- Added wxStatusBar support to XRC (Brian Ravnsgaard Riis)

Unix:

- Unicode compilation fix in wxDateTime
- typo in configure which broke AIX build fixed (Swengtoo)
- fixed priorities of mailcap entries (David Hart)

wxMSW:

- strip ampersands from strings returned by wxMenuBar::GetLabelTop()
- fixed bug in wxIniConfig::DeleteEntry() (Parinya Thipchart)
- fixed hang (sometimes) in wxThread::Delete() (Carl-Friedrich Braun)
- wxLongLong formatting with MinGW corrected
- wxFileDialog now returns correct filter index for multiple-file dialogs
- Fixed a bug in wxSpinCtrl::DoGetBestSize that would make wxSpinCtrl too tall

wxGTK:

- allow calling wxWindow::SetFont if window not yet created

wxOS2:
- fixed various problems in file handling
- fixed bug in Refresh (was not taking reversed coordinate system into
  account, so failed for most generic controls)
- partly fixed wxMouseEvent (reversed coordinate system again, handling of
  CTRL and SHIFT keys. ALT still doesn't work as expected by wxWidgets, though)

wxODBC:
- Identifying DB VENDOR signatures updated in wxDb::Dbms()
- wxDb::getDbInfo() will no longer return failure if the return code was 
  SQL_SUCCESS_WITH_INFO
- Attempted to port everything for BLOB support back to 2.4.x.  I think it is
  complete.
- Table names now prepended to column names when joining tables.  This is only 
  if there is not a '.' in the column name already.
- Null column support fixes (SF #766404)



2.4.2
-----
