@@ -10,10 +10,12 @@
 
 The event handler for the following functions takes a 
  \helpref{wxGridEditorCreatedEvent}{wxgrideditorcreatedevent} parameter.
+The ...\_CMD\_... variants also take a window identifier.
 
 \twocolwidtha{7cm}
 \begin{twocollist}\itemsep=0pt
 \twocolitem{{\bf EVT\_GRID\_EDITOR\_CREATED(func)}}{The editor for a cell was created. Processes a wxEVT\_GRID\_EDITOR\_CREATED.}
+\twocolitem{{\bf EVT\_GRID\_CMD\_EDITOR\_CREATED(func)}}{The editor for a cell was created; variant taking a window identifier. Processes a wxEVT\_GRID\_EDITOR\_CREATED.}
 \end{twocollist}%
 
 \latexignore{\rtfignore{\wxheading{Members}}}
@@ -159,10 +161,12 @@ Returns TRUE if the Shift key was down at the time of the event.
 
 The event handler for the following functions takes a 
  \helpref{wxGridRangeSelectEvent}{wxgridrangeselectevent} parameter.
+The ...\_CMD\_... variants also take a window identifier.
 
 \twocolwidtha{7cm}
 \begin{twocollist}\itemsep=0pt
 \twocolitem{{\bf EVT\_GRID\_RANGE\_SELECT(func)}}{The user selected a group of contiguous cells. Processes a wxEVT\_GRID\_RANGE\_SELECT.}
+\twocolitem{{\bf EVT\_GRID\_CMD\_RANGE\_SELECT(func)}}{The user selected a group of contiguous cells; variant taking a window identifier. Processes a wxEVT\_GRID\_RANGE\_SELECT.}
 \end{twocollist}%
 
 \latexignore{\rtfignore{\wxheading{Members}}}
@@ -264,11 +268,14 @@ This event class contains information about a row/column resize event.
 
 The event handler for the following functions takes a 
  \helpref{wxGridSizeEvent}{wxgridsizeevent} parameter.
+The ...\_CMD\_... variants also take a window identifier.
 
 \twocolwidtha{7cm}
 \begin{twocollist}\itemsep=0pt
 \twocolitem{{\bf EVT\_GRID\_COL\_SIZE(func)}}{The user resized a column by dragging it. Processes a wxEVT\_GRID\_COL\_SIZE.}
 \twocolitem{{\bf EVT\_GRID\_ROW\_SIZE(func)}}{The user resized a row by dragging it. Processes a wxEVT\_GRID\_ROW\_SIZE.}
+\twocolitem{{\bf EVT\_GRID\_CMD\_COL\_SIZE(func)}}{The user resized a column by dragging it; variant taking a window identifier. Processes a wxEVT\_GRID\_COL\_SIZE.}
+\twocolitem{{\bf EVT\_GRID\_CMD\_ROW\_SIZE(func)}}{The user resized a row by dragging it; variant taking a window identifier. Processes a wxEVT\_GRID\_ROW\_SIZE.}
 \end{twocollist}%
 
 \latexignore{\rtfignore{\wxheading{Members}}}
